# agent-delivery-harness

./: .env.example  .gitignore  .markdownlint-cli2.jsonc  AGENTS.md  CHANGELOG.md  README.md  check-pr.sh  create-pr.sh  finish-issue.sh  init.sh  pyproject.toml  start-issue.sh
.copilot-tracking/active-issues/: 268  332  335  65  86
.copilot/agents/: code-review-subagent.agent.md  generator-subagent.agent.md  implementation-subagent.agent.md  planning-subagent.agent.md  test-subagent.agent.md
.copilot/instructions/: bash.instructions.md  harness.instructions.md  python.instructions.md  tdd.instructions.md  terraform-azure.instructions.md  workflow-tiers.instructions.md
.copilot/prompts/: audit-sweep.prompt.md  session-ritual.prompt.md
.copilot/skills/: _audit-conventions.md  _review-known-false-positives.md
.devcontainer/: Dockerfile  devcontainer.json  postCreate.sh
.github/: harness-identity.env  harness-identity.env.example
.github/ISSUE_TEMPLATE/: feature.yml
.github/workflows/: ci.yml  harness-smoke.yml  python-ci.yml  release.yml
docs/: HARNESS.md  PROGRESS.md  RELEASING.md  boundary-gates-research.md  copilot-health-check.md  deep-tracing-journey.md  getting-started.md  harness-contract.yml  multi-language-profiles.md  observability-journey.md  scripts-language-policy.md  scripts-portfolio-review.md  subagent-prompt-modernization-review.md  tech-debt-tracker.md
docs/archive/: PROGRESS.md  copilot-health-check.md  skill-prompt-modernization-review.md
docs/evaluation/: README.md  agent-delivery-accuracy-matrix.md  agent-delivery-accuracy-matrix.v1.json  azure-evaluation-runtime.md  cost-efficiency-evals.md  dataset-governance.md  evaluation-matrix.md  failure-mode-taxonomy.md  failure-review-template.md  feature-breakdown-evals.md  log-schema.v1.json  meta-test-triage.md  mutation-evals.md  observability-and-trace-schema.md  outcome-evals.md  product-quality-rubric.md  research-notes.md  skill-evals.md  statistical-methodology.md  subagent-role-evals.md  telemetry-retention-pii.md  trace-action-log-evals.md  trace-schema.v1.json  trace-scorecard.v1.json  trace-summary.v1.json  trajectory-evals.md
docs/runtime-adapters/: claude-code.md  claude-code.settings.example.json  github-copilot.hooks.example.json  github-copilot.md  github-copilot.skill-spike.md  github-copilot.subagent-spike.md  github-copilot.trace-spike.md  otlp-azure-monitor.md
infra/terraform/: DECOMMISSIONED-workbook.md  README.md  harness-quality.workbook.json  main.tf  outputs.tf  providers.tf  terraform.tfvars.example  variables.tf  versions.tf  workbook.tf
profiles/: README.md  go.profile.sh  java.profile.sh  node.profile.sh  python.profile.sh  ruby.profile.sh
scripts/: affected-sensors.sh  audit-sweep.sh  check-feature-list.sh  check-sensor-claims.sh  check-trace-consistency.sh  ci-coverage-lib.sh  claude-code-trace-hook.sh  copilot-trace-hook.sh  create-pr.sh  economics-report-lib.sh  finish-issue.sh  finish-lib.sh  gen-export-env.sh  github-identity-lib.sh  init.sh  install-harness.sh  install-harness.tombstones  issue-lib.sh  lifecycle-runtime-lib.sh  log-export.sh  log-handback.sh  merge-pr.sh  protect-main.sh  python-gates.sh  reconcile-lib.sh  render-action-log.sh  review-gate.sh  run-sensors.sh  sanitize-trace.sh  scaffold-language.sh  start-issue.sh  sync-version.sh  trace-export.sh  trace-lib.sh  trace-reconstruct.sh  trace-report.sh  trace-scorecard.sh  validate-trace.sh
scripts/trace_tools/: __init__.py  __main__.py  appinsights.py  logmap.py  mapping.py  otlp.py
tests/: harness-dev-sensors.txt
tests/meta/: test_agent_delivery_accuracy_matrix_contract.sh  test_agent_delivery_accuracy_matrix_doc.sh  test_agent_model_pins.sh  test_agent_span_doctrine.sh  test_archived_reports.sh  test_audit_conventions_shared.sh  test_blocking_criteria.sh  test_code_review_public_exposure.sh  test_code_review_trace_evidence.sh  test_contract_v2_doctrine_consumers.sh  test_copilot_spike_doc_measured_v1_0_70.sh  test_create_pr_conventions.sh  test_create_pr_push_contract_docs.sh  test_current_state_docs.sh  test_devcontainer_optional.sh  test_devcontainer_pinned.sh  test_docs_harness_economics.sh  test_docs_health_check_superseded.sh  test_docs_installer_assets_sync.sh  test_docs_smoke_coverage_sync.sh  test_failure_review_template.sh  test_finish_lib_extracted.sh  test_generator_research_protocol.sh  test_generator_role_contract.sh  test_impl_usefulness_grading.sh  test_imported_skills_repo_scoped.sh  test_installed_harness_runtime.sh  test_instructions_no_stale_repetition.sh  test_instructions_product_generic.sh  test_journey_docs_retired.sh  test_l0_ci_gate.sh  test_l0_sensors_tap.sh  test_lifecycle_runtime_lib.sh  test_lifecycle_trap_no_inline_copy.sh  test_log_schema_single_source.sh  test_no_antiderailment_scaffolding.sh  test_no_deleted_export_refs.sh  test_planner_web_fallback.sh  test_post_compaction_reanchor.sh  test_product_quality_rubric.sh  (+26 more)
tests/scripts/: test_actionability_gate.sh  test_adapter_token_metrics_matrix.sh  test_adopter_profile_sweep.sh  test_affected_sensors.sh  test_audit_sweep.sh  test_boundary_gates_research_inventory.sh  test_capture_deprecation_docs.sh  test_capture_retirement_boundary_doc.sh  test_ci_coverage_docs.sh  test_claude_adapter_docs.sh  test_claude_hook_agent_id_state.sh  test_claude_hook_noop.sh  test_claude_hook_skill_inventory.sh  test_claude_hook_stop_span.sh  test_claude_hook_subagent_stamp.sh  test_claude_hook_subagent_stop_enrich.sh  test_claude_hook_tool_span.sh  (+241 more)
(+76 files in other folders)
