[project]
name = "agent-delivery-harness-trace-tools"
version = "0.1.0"
description = "Python pilot for the harness deep-trace span/log exporters (scripts/trace_tools)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

# The importable package lives under scripts/ (scripts/trace_tools), not a
# standard src/ layout, and is executed via `PYTHONPATH=scripts python3 -m
# trace_tools`. Tell uv not to build/install this project as a wheel — the dev
# gates only need a virtualenv carrying the tools below.
[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.14", "mypy>=1.18", "pytest>=8.4"]

[tool.ruff]
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["scripts/trace_tools"]
mypy_path = "scripts"
explicit_package_bases = true
strict = true

[tool.pytest.ini_options]
testpaths = ["scripts/trace_tools/tests"]
pythonpath = ["scripts"]
