[project]
name = "agent-delivery-harness-trace-tools"
version = "0.4.0"
description = "Python pilot for the harness deep-trace span/log exporters (scripts/trace_tools)."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

# The importable package lives under scripts/ (scripts/trace_tools), not a
# standard src/ layout, and is executed via `PYTHONPATH=scripts python3 -m
# trace_tools`. Tell uv not to build/install this project as a wheel — the dev
# gates only need a virtualenv carrying the tools below.
[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.14", "mypy>=1.18", "pytest>=8.4"]

[tool.ruff]
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
files = ["scripts/trace_tools"]
mypy_path = "scripts"
explicit_package_bases = true
strict = true

[tool.pytest.ini_options]
testpaths = ["scripts/trace_tools/tests"]
pythonpath = ["scripts"]

# python-semantic-release (issue #257): automate SemVer bumps + changelog from
# Conventional Commits. pyproject.toml [project].version is the single source of
# truth; the build step mirrors it into the root VERSION file for trace-lib.sh.
[tool.semantic_release]
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
version_toml = ["pyproject.toml:project.version"]
build_command = "bash scripts/sync-version.sh"
assets = ["VERSION"]
# Keep the harness on the 0.x line: PSR v10 defaults allow_zero_version to false,
# which forces the first computed release to 1.0.0 regardless of change level
# (the #257 -> premature 1.0.0 bug, see #260). allow_zero_version keeps us on
# 0.x, and major_on_zero=false makes even a BREAKING CHANGE bump the minor on
# 0.x — so 1.0.0 is reachable only via a deliberate manual --major.
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
