[project]
name = "agent-delivery-harness-trace-tools"
version = "0.27.0"
description = "Dormant Python toolchain (ruff/mypy/pytest) for the harness; the trace_tools export package was removed by issue #272 — retained so a future Python component has a ready home."
readme = "README.md"
requires-python = ">=3.14"
dependencies = []

# Issue #272 removed the only Python package (scripts/trace_tools, the cloud
# export leg). No Python source ships today; the uv/ruff/mypy/pytest toolchain
# is kept dormant. Tell uv not to build/install this project as a wheel — the
# dev gates only need a virtualenv carrying the tools below.
[tool.uv]
package = false

[dependency-groups]
dev = ["ruff>=0.14", "mypy>=1.18", "pytest>=8.4"]

[tool.ruff]
line-length = 100
src = ["scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

# NOTE: issue #272 deleted the only Python package (scripts/trace_tools/, the
# cloud export leg). No Python source remains today; the uv/ruff/mypy/pytest
# toolchain is retained dormant so a future Python component gets a ready home.
# These paths intentionally point at the (Python-free) scripts/ dir, so mypy and
# pytest cleanly no-op (init.sh reports them as skipped) until Python code lands.
[tool.mypy]
files = ["scripts"]
mypy_path = "scripts"
explicit_package_bases = true
strict = true

[tool.pytest.ini_options]
testpaths = ["scripts"]
pythonpath = ["scripts"]

# python-semantic-release (issue #257): automate SemVer bumps + changelog from
# Conventional Commits. pyproject.toml [project].version is the single source of
# truth; the build step mirrors it into the root VERSION file for trace-lib.sh.
[tool.semantic_release]
tag_format = "v{version}"
commit_parser = "conventional"
commit_message = "chore(release): {version}"
version_toml = ["pyproject.toml:project.version"]
build_command = "bash scripts/sync-version.sh"
assets = ["VERSION"]
# Keep the harness on the 0.x line: PSR v10 defaults allow_zero_version to false,
# which forces the first computed release to 1.0.0 regardless of change level
# (the #257 -> premature 1.0.0 bug, see #260). allow_zero_version keeps us on
# 0.x, and major_on_zero=false makes even a BREAKING CHANGE bump the minor on
# 0.x — so 1.0.0 is reachable only via a deliberate manual --major.
allow_zero_version = true
major_on_zero = false

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"

[tool.semantic_release.branches.main]
match = "main"
